# HTRUSS

./: CMakeLists.txt  LICENSE  README.md  ScHoLP.all.sh  run.py
include/: basic.hpp  bitmap.hpp  hyperedge.hpp  hypergraph.hpp
src/: Baseline.cpp  GraphInfo.cpp  Motifs.cpp  Motifs.parallel.cpp  PrefixForest.cpp  PushForward.cpp
